# Python-web-hw9

./: Commands.txt  README.md  config.ini  main.py  models.py  pyproject.toml
JSON/: authors.json  quotes.json
