[tool.poetry]
name = "python-web-hw9"
version = "0.1.0"
description = "Home work 09. Web scrapping"
authors = ["Mykhailo Ivanov <ivmv2007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
